# RifaApp-back

./: .gitignore  README.md  example.env  pyproject.toml  sqitch.conf  sqitch.plan
.github/workflows/: dispatch-infra.yml  dispatch-migrations.yml  rollback.yml
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth.py  health.py  migrations.py  purchases.py  raffles.py  raffles_v2.py  tickets.py
app/core/: config.py  logging.py  security.py
app/cqrs/: __init__.py
app/cqrs/commands/: __init__.py  auth.py  migrations.py  participants.py  raffles.py
app/cqrs/queries/: __init__.py  auth.py  purchases.py  raffles.py
app/db/: connection.py  migrations.py  schema.py
app/models/: schemas.py
app/services/: auth.py  migrations.py  purchases.py  raffles.py  raffles_v2.py  tickets.py
rifaapp_cli/: deploy.py
scripts/: build_lambda.sh
sqitch/deploy/: cqrs_read_model.sql  init.sql  raffle_owner.sql
sqitch/revert/: cqrs_read_model.sql  init.sql  raffle_owner.sql
sqitch/verify/: cqrs_read_model.sql  init.sql  raffle_owner.sql
tests/: test_migrations.py
