[tool.poetry]
name = "rifaapp-api"
version = "0.1.0"
description = "RifaApp Lambda API (FastAPI)"
authors = ["RifaApp Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
mangum = "^0.17.0"
pg8000 = "^1.31.2"
email-validator = "^2.1.1"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
