[project]
name = "rifaapp-api"
version = "0.1.0"
description = "RifaApp Lambda API (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "RifaApp Team" }]
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "mangum>=0.17.0,<0.18.0",
    "pg8000>=1.31.2,<2.0.0",
    "email-validator>=2.1.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "uvicorn>=0.30.0,<0.31.0",
    "pytest>=8.2.0,<9.0.0",
]

[project.scripts]
deploy = "rifaapp_cli.deploy:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "rifaapp_cli"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
